--- a/Submissions Page/submissions.css
+++ b/Submissions Page/submissions.css
@@ -52,14 +52,88 @@ body, html {
   }
 
   .gallery-image {
-    width: 50%;
+    width: 400px;
     border-radius: 20px;
+    grid-area: image;
+  }
+
+
+  .gallery-title {
+    grid-area: title;
+    font-size: 16px;
+  }
+
+  .gallery-link {
+    grid-area: link;
+    font-size: 12px;
+    text-align: end;
   }
 
   #gallery-card-container {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: min-content;
     gap: 50px;
     margin: 50px;
+    
+  }
+
+  .gallery-card {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-areas:
+    "image image"
+    "title link";
+    padding: 10px 5%;
+  }
+
+  h1 {
+    font-weight: bold;
+    font-size: 36px;
+    text-align: center;
+  }
+  
+  #submission-form {
+    background-color: var(--blue);
+    height: fit-content;
+    display: block;
+    text-align: center;
+    border-radius: 25px;
+    width: 75%;
+    margin: 10px auto;
+    padding: 25px 0;
+    
+  }
+
+  ::placeholder {
+    color: #D9D9D9;
+  }
+
+  .form-input {
+    margin: 10px;
+    border: none;
+    height: 35px;
+    border-radius: 5px;
+    width: 75%;
+    padding-left: 20px;
+    
+  }
+
+  #form-title {
+    padding: 15px 0px;
+    font-weight: bold;
+    font-size: 24px;
+    color: white;
+  }
+
+  #input-submit {
+    width: 30%;
+    background-color: transparent;
+    border: solid 1px var(--teal);
+    color: var(--teal);
+    border-radius: 25px;
+    font-size: 20px;
+    padding: 15px;
+    margin-top: 15px;
   }
