--- a/Submissions Page/submissions.css
+++ b/Submissions Page/submissions.css
@@ -1,41 +1,4 @@
-body, html {
-    height: 100%;
-  }
-  
-  body {
-      font-family: 'Montserrat', sans-serif;
-      display: flex;
-      flex-direction: column;
-  }
-  
-  a {
-      color: inherit;
-      text-decoration: none;
-  }
-  
-  header {
-      display: flex;
-      justify-content: space-between;
-      padding: 10px 25px;
-      background-color: var(--blue);
-      align-items: center;
-  }
-  
-  #header-title {
-      color: var(--teal);
-      font-size: 36px;
-  }
-  
-  nav {
-      color: white;
-      font-size: 16px;
-      display: flex;
-      gap: 20px;
-  }
 
-  header {
-    background-color: var(--blue);
-  }
 
   main {
     display: grid;
@@ -53,8 +16,11 @@ body, html {
 
   .gallery-image {
     width: 400px;
+    max-height: 250px;
+    object-fit: cover;
     border-radius: 20px;
     grid-area: image;
+    
   }
 
 
