--- a/reset.css
+++ b/reset.css
@@ -53,3 +53,44 @@ table {
 	--blue: #2A3B49;
 	--teal: #7BFFE9;
 }
+
+/*Universal Styling*/
+
+body, html {
+    height: 100%;
+  }
+  
+  body {
+      font-family: 'Montserrat', sans-serif;
+      display: flex;
+      flex-direction: column;
+  }
+  
+  a {
+      color: inherit;
+      text-decoration: none;
+  }
+  
+  header {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px 25px;
+      background-color: var(--blue);
+      align-items: center;
+  }
+  
+  #header-title {
+      color: var(--teal);
+      font-size: 36px;
+  }
+  
+  nav {
+      color: white;
+      font-size: 16px;
+      display: flex;
+      gap: 20px;
+  }
+
+  header {
+    background-color: var(--blue);
+  }
