--- a/reset.css
+++ b/reset.css
@@ -88,9 +88,17 @@ body, html {
       color: white;
       font-size: 16px;
       display: flex;
+      align-items: center;
       gap: 20px;
   }
 
   header {
     background-color: var(--blue);
+  }
+
+  #display-toggle {
+    background-color: transparent;
+    border: none;
+    color: var(--teal);
+    font-size: 16px;
   }
